Tests/RunCMake/NinjaMultiConfig/SimpleNoCross-relwithdebinfo-in-release-graph-clean-build-stderr.txt
^ninja: error: unknown target 'clean:RelWithDebInfo'$
